# pyaddepar

./: .buildinfo  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-Jupyter  Dockerfile-Test  LICENSE  MANIFEST.in  Makefile  README.md  build.sh  condalist.txt  coverage.sh  docker-compose-public.yml  docker-compose.test.yml  docker-compose.yml  figi.py  genindex.html  graph.sh  jupyter.sh  jupyter_notebook_config.py  main.py  production.txt  pyproject.toml  readme.md  search.html  setup.py  sphinx.sh  strip.sh  tag.sh  taskfile.yml  test.sh
.github/workflows/: book.yml  ci.yml  hadolint.yml  main.yml  pre-commit.yml  pypi.yml  release.yml
alchemy/: accounts.py  aux.py  cash.py  decl.py  model.py  transactions.py
alchemy/data/: cash.csv  data.py  master.csv
artifacts/lines/: lines.txt
artifacts/sphinx/: genindex.html  objects.inv  searchindex.js
binder/: Dockerfile  example.ipynb
binder/files/: config.ini  example.ipynb
book/: .buildinfo  _config.yml  _toc.yml  genindex.html  objects.inv  search.html  searchindex.js
book/docs/: api.html  api.md  index.html
book/sphinx/: conf.py  index.rst
config/: bloomberg.py  wurst.py
docs/: api.html  index.html
jupyter/: Dockerfile
license/: NETWORKX_LICENSE  REQUESTS_LICENCE
pdoc/: index.html  pyaddepar.html  search.js
pdoc/pyaddepar/: addeparrequest.html  flask_addepar.html
pyaddepar/: __init__.py  addeparrequest.py  error.py  figi.py  flask_addepar.py  graph.py  parser.py  preader.py  reader.py  request.py
pyaddepar/flask/: flask_addepar.py
pyaddepar/graph/: groups.py  pandasgraph.py  positions.py  transactions.py
sandbox/: client.py  experiments.py  groups.py  makeuser.py  positions.py  transactions.py  users.py
scripts/: figi.py  main.py
source/: conf.py
sphinx/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
test/: .env-test  requirements.txt  test_addepar.py  test_app.py  test_reader.py  test_request.py
tests/: test_app.py  test_parser.py  test_request.py
work/: Groups.ipynb  headers.ipynb
(+52 files in other folders)
