[tool.poetry]
name = "pyaddepar"
version = "0.0.0"
description = "..."
authors = ["Lobnek Wealth Management"]
readme = "readme.md"
repository = "https://github.com/lobnek/pyaddepar"
packages = [{include = "pyaddepar"}]

[tool.poetry.dependencies]
python = ">=3.9.0"
flask = "*"
requests = "*"
#mongoengine= "*"
#pandas = "<2.0.0"
#pyarrow = "*"
#fastparquet= "*"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
#mongomock = "*"
#setuptools = "*"
pytest-cov = "*"
#jupyterlab = "*"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
