[tool.poetry]
name = "pyaddepar"
version = "0.0.0"
description = "..."
authors = ["Lobnek Wealth Management"]
readme = "readme.md"
repository = "https://github.com/lobnek/pyaddepar"
packages = [{include = "pyaddepar"}]

[tool.poetry.dependencies]
python = ">=3.9.0"
flask = "*"
requests = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
pytest = "8.1.0"
pytest-cov = "*"
httpretty = "*"
requests-mock = "*"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
