[project]
name = "pyaddepar"
version = "0.0.0"
description = "..."
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[project.urls]
repository = "https://github.com/lobnek/pyaddepar"


[project.optional-dependencies]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "httpretty>=1.1.4",
    "requests-mock>=1.12.1"
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyaddepar"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]

[tool.bandit]
exclude_dirs = ["tests"]
